[package]
name = "stable-diffusion-prompt-parser"
version = "0.1.0"
authors = ["syt <ununian@outlook.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.5", optional = true }

pest = { version = "2.4" }
pest_derive = { version = "2.4" }
serde_json = { version = "1.0" }
num = { version = "0.4.0" }
lazy_static = "1.4.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
expect-test = "1.4"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
